Refactoring messages Updated version of selenium and appium Ignore test is integration is disabled